traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return (estFaceMur && estDroiteMur &&getDirection==Direction.East)
  ^